--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@ fetch("https://coronavirus-monitor.p.rapidapi.com/coronavirus/worldstat.php", {
 fetch("https://coronavirus-monitor.p.rapidapi.com/coronavirus/cases_by_country.php", {
     "method": "GET",
     "headers": {
-        "x-rapidapi-host": "coronavirus-monitor.p.rapidapi.com",
-        "x-rapidapi-key": "53009286a0mshdc8ec356f7aa205p1e0e80jsn5858f548ed53"
+        "x-rapidapi-host": "your host",
+        "x-rapidapi-key": "add your api"
     }
 })
 .then(response => response.json().then(data =>{
